crates/vvv/tests/corpus/snapshots/rust-navigation__navigate-cycle__human.snap
---
source: crates/vvv/tests/corpus.rs
expression: "corpus.run(args, false)"
---
exit 0
--- stdout ---
--- stderr ---
Could not resolve cyclic imports
