crates/vvv/tests/corpus/snapshots/rust-navigation__navigate-cycle__json.snap
---
source: crates/vvv/tests/corpus.rs
expression: "corpus.run(args, true)"
---
exit 0
--- stdout ---
{
  "status": "ok",
  "schema": 1,
  "result": {
    "snapshot": "c8ef1f893543b37c1dc45a4e3c219691241d8ddecbfe16e1e1eb0490e909f337",
    "outcome": "unavailable",
    "reason": "cyclic_imports"
  }
}
--- stderr ---
